layout issues fixed for reset password page

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -59,8 +59,21 @@ html, body {
 		height:150px;
 		cursor:pointer;
 }
+textarea, select {
+		border: solid 1px #dfdfdf;}
 .menu_container {
 		width:100%;
+}
+.slct{
+		margin-top:6px;color:#999999;background-image: none;
+		font-family: Verdana;
+		font-style: normal;
+		font-size: 12px;
+		color: #999999;
+		border-color: #E5E5E5;
+		border-style: solid;
+		border-width: 1px;
+		background-color: #F0F0F0;
 }
 .right_container {
 		width:88%;
@@ -105,10 +118,9 @@ html, body {
 		font-family:Arial, Helvetica, sans-serif; 
 		font-size:13px;
 		float:right;
-		width:auto;
+		width:175px;
 		padding-top:13px;
 		color:#727272;
-		padding-right:12px;
 }
 .user_name {
 		float:left;
@@ -422,6 +434,13 @@ a.emp_list:hover {
 	width: 42px;
 	margin-top:60px;
 }
+.value_caption{
+	background-image:url(../images/sprites.png);
+	background-position: -128px -229px;
+	height: 41px;
+	width: 42px;
+	margin-top:60px;
+}
 .team_memebr_caption{
 	background-image:url(../images/sprites.png);
 	background-position: -588px -191px;
@@ -604,8 +623,8 @@ h1.captn {
 
 }
 .cmt_txt_exp { 
-	max-width:442px;
-	width:442px;
+	max-width:450px;
+	width:450px;
 	min-width:130px;
 	height:16px;
 	max-height:20px;
@@ -631,7 +650,7 @@ h1.captn {
 
 }
 .descr_txt_exp { 
-	max-width:465px;
+	max-width:490px;
 	width:490px;
 	min-width:130px;
 	font-family:Arial, Helvetica, sans-serif;
@@ -857,6 +876,7 @@ table.tab_table th {background: #f8f8f8; /* Old browsers */
 	margin-left:17px;
 	margin-top:10px;
 }
+
 .descton{
 	width:140px;
 }
@@ -1089,7 +1109,7 @@ a.login_link:hover {
 	float:left;
 }
 .rest_psd_opn {
-
+	float: left;
 	margin-left: 30px;
 	line-height: 40px;
 	font-size: 13px;
@@ -1116,17 +1136,13 @@ a.login_link:hover {
 	color: #666666;
 	font-weight: bold;
 }
-.hdng{
-    color: #666666;
-    font-weight: bold;
-    text-shadow: 2px 2px 2px #FFFFFF;
-	font-size:13px;
-	padding-left:5px;
-}
-
 .unedtbl_pnt{
 	background-color:#FFFFFF;
 	padding:1px 7px 1px 7px;
 	border:solid 1px #dfdfdf;
 	
+}
+.rst_textbox {
+	width:146px;
+	padding-left:2px;
 }
